Fix pieces not showing and centers on each square

--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,15 @@
 .square svg {
   width : 30px;
   height: 30px;
+  margin: 5px;
+  position: relative;
+  z-index: -9;
+}
+
+.piece {
+  position: relative;
+  z-index: 9;
+  
 }
 
 .beige {
